<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_circulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CirculoFragment">

    <EditText
        android:id="@+id/inputDiametro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="72dp"
        android:hint="@string/campo_diametro"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCalcularArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/botao_area"
        app:layout_constraintTop_toBottomOf="@id/inputDiametro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalcularPerimetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/botao_perimetro"
        app:layout_constraintTop_toBottomOf="@id/btnCalcularArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvResultadoCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/resultado"
        app:layout_constraintTop_toBottomOf="@id/btnCalcularPerimetro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
